@@ -1,8 +1,8 @@
 (require "class.linux.int.lisp")
 
 (defclass network () 
-  (net_interfaces (net_path :accessor net_path :initform "/sys/class/net/")
-       net_traffic net_traffic_display net_traffic_display_simple))
+  (net_interfaces net_traffic 
+   (net_path :accessor net_path :initform "/sys/class/net/")))
 
 (defmethod initialize-instance :after ((mynetwork network) &key)
   "Upon initialization of a storage object, it automatically sets and
@@ -31,19 +31,6 @@ calculates slots."
       (push myint collected_interfaces))
 collected_interfaces ))
 
-(defmethod lhstat_getnetwork (mynetwork)
-  ;; TODO: use default route interface for displaying stats
-  ;; currently, it's the last interface that gets displayed,
-  ;; accidentaly being a correct one on this system, wlan0
-  
+(defmethod lhstat_getnetwork (mynetwork)  
    (dolist (myint (slot-value mynetwork 'net_interfaces))
-      (net_collect_stats myint (slot-value mynetwork 'sleep_sec))
-      (setf (slot-value mynetwork 'net_traffic_display_simple)
-  	   (format nil "^~4A N ~4A " 
-  		   (unit (slot-value myint 'int_stat_tx))
-  		   (unit (slot-value myint 'int_stat_rx))))
-      (setf (slot-value mynetwork 'net_traffic_display)
-  	   (format nil "^~4A (~A) ~4A " 
-  		   (unit (slot-value myint 'int_stat_tx))
-  		   (slot-value myint 'int_sys_name)
-  		   (unit (slot-value myint 'int_stat_rx))))))
+      (net_collect_stats myint (slot-value mynetwork 'sleep_sec))))
