@@ -1,3 +1,7 @@
+2008-12-16  version 0.5.6 toni  <tony@irational.org>
+
+	* moved creation of all displaya to the linux class
+
 2008-11-17  version 0.5.5 toni  <tony@irational.org>
 
 	* ability to change displays and polling timer via newly added
